--- a/static/css/product.css
+++ b/static/css/product.css
@@ -24,6 +24,7 @@
     margin-top: 15px;
     font-size: 18px;
     font-weight: 700;
+    cursor: pointer;
 }
 
 .step_num.active {
@@ -38,6 +39,7 @@
     font-size: 14px;
     font-weight: 700;
     margin-top: 5px;
+    cursor: pointer;
 }
 
 .step_num.border {
@@ -246,30 +248,43 @@
 }
 
 .price .form-area {
-    position: relative;
+    text-align: right;
+    width: 375px;
+    margin-left: 173px;
+    margin-top: 30px;
     margin-bottom: 30px;
 }
 
-.price .variation_title {
-    width: 125px;
+.price input {
+    width: 230px;
     padding: 8px 10px 8px 15px;
     vertical-align: top;
     font-size: 12px;
     border: 1px solid #DEDEDE;
-    background: rgba(242, 242, 242, 0.49);
     color: rgba(0, 0, 0, .7);
-    margin-right: 10px;
 }
 
-.price .variation_price {
-    width: 125px;
-    padding: 8px 10px 8px 15px;
-    vertical-align: top;
-    font-size: 12px;
+.price .price-option-area {
+    background: white;
     border: 1px solid #DEDEDE;
-    background: rgba(242, 242, 242, 0.49);
-    color: rgba(0, 0, 0, .7);
-    margin-right: 8px;
+    padding: 15px 23px 20px 43px;
+    width: 330px;
+    text-align: left;
+    margin-top: 10px;
+    margin-left: 39px;
+    position: relative;
+}
+
+.price .price-option-area input {
+    width: 190px;
+}
+
+.price .price-option-area label {
+    margin-left: 5px;
+}
+
+.price .price-option-area .variation_title {
+    width: 270px;
 }
 
 .price .unit {
@@ -278,41 +293,40 @@
     top: 38px;
 }
 
-.price #id_workContent {
-    width: 297px;
-    padding: 8px 10px 8px 15px;
-    vertical-align: top;
-    font-size: 12px;
-    border: 1px solid #DEDEDE;
-    background: rgba(242, 242, 242, 0.49);
-    color: rgba(0, 0, 0, .7);
+.price .title {
+    text-align: left;
     margin-top: 20px;
+    font-size: 14px;
+    margin-left: 57px;
+    margin-bottom: 15px;
 }
 
-.price #id_workingDay {
-    width: 90px;
-    padding: 8px 10px 8px 15px;
-    vertical-align: top;
-    font-size: 12px;
-    border: 1px solid #DEDEDE;
-    background: rgba(242, 242, 242, 0.49);
+.price .price_unit {
+    position: absolute;
+    width: 100px;
+    text-align: left;
+    top: 9px;
+    right: -108px;
+    font-size: 14px;
+    font-weight: 500;
     color: rgba(0, 0, 0, .7);
-    margin-top: 20px;
 }
 
 .price .options {
-    width: 12px;
-    height: 12px;
-    border: 1px solid rgba(0, 0, 0, .3);
-    background: white;
+    width: 20px;
+    height: 20px;
+    border-top: 1px solid #DEDEDE;
+    border-left: 1px solid #DEDEDE;
     padding: 3px;
-    font-size: 12px;
+    font-size: 14px;
     font-weight: 100;
     color: rgba(0, 0, 0, .5);
     cursor: pointer;
     position: absolute;
-    right: 175px;
-    top: 35px;
+    right: 0;
+    bottom: 0px;
+    line-height: 23px;
+    text-align: center;
 }
 
 .price .price_field {
@@ -602,6 +616,29 @@
     margin: 0 auto;
 }
 
- {
-    height: 400px !important;
+.notice {
+    text-align: center;
+    width: 500px;
+    margin: 0 auto;
+    color: rgba(0, 0, 0, .7);
+    font-weight: 600;
+    margin-top: 20px;
+}
+
+.notice h1 {
+    font-size: 20px;
+    letter-spacing: -.07em;
+}
+
+.notice .notice-sub {
+    width: 350px;
+    margin: 0 auto;
+    padding-top: 10px;
+    text-align: left;
+}
+
+.notice p {
+    letter-spacing: -.01em;
+    font-size: 14px;
+    margin-top: 5px;
 }
