--- a/templates/account/verification_sent.html
+++ b/templates/account/verification_sent.html
@@ -4,8 +4,8 @@
 {% block css %}
     <link rel="stylesheet" href="{% static 'css/auth.css' %}">
     <style type="text/css">
-        .container {
-            background-image: url("{% static 'img/01.png' %}");
+        .bg_container {
+            background-image: url("{% static 'img/02.png' %}");
             -webkit-background-size: cover;
             -moz-background-size: cover;
             -o-background-size: cover;
@@ -16,16 +16,19 @@
 
             width: 100%;
             height: auto;
-
-            position: absolute;
+            overflow: auto;
             top: 88px;
             left: 0;
+        }
+
+        footer {
+            margin-top: 0;
         }
     </style>
 {% endblock %}
 
 {% block content %}
-<div class="container">
+<div class="bg_container">
     <div class="auth-logo">
         <img src="{% static 'img/logo2.png' %}">
     </div>
