--- a/templates/header.html
+++ b/templates/header.html
@@ -16,7 +16,7 @@
         </div>
         <div id="header_tnb">
             {% if user.is_authenticated %}
-                <a id="point" href="#">
+                <a id="point" href="{% url 'point_history' %}">
                     POINT <span id="money">{{ user.point }}</span>
                 </a>
                 <a id="message" href="#">
