--- a/static/css/dashboard/seller/manage.css
+++ b/static/css/dashboard/seller/manage.css
@@ -6,11 +6,11 @@
     width: 88px;
     height: 30px;
     position: absolute;
-    right: 30px;
-    top: 30px;
+    right: 20px;
+    top: 35px;
     font-size: 12px;
     background: #403dc1;
-    padding: 3px 10px 3px 10px;
+    padding: 0 10px 0 10px;
     color: white;
     line-height: 30px;
     text-align: center;
