--- a/templates/seller/product_manage.html
+++ b/templates/seller/product_manage.html
@@ -17,16 +17,11 @@
 
         </div>
         <div class="dashboard-product-manage">
-            <div class="product-list-nav">
-                <ul>
-                    <li>전체(0)</li>
-                    <li>작업대기(0)</li>
-                    <li>작업진행(0)</li>
-                    <li>작업완료(0)</li>
-                    <li>거래완료(0)</li>
-                    <li>취소(0)</li>
-                </ul>
-            </div>
+            {% for item in product_list %}
+                <div class="product-item">
+                    {{ item }}
+                </div>
+            {% endfor %}
         </div>
     </div>
 {% endblock %}
