--- a/templates/product/product_detail.html
+++ b/templates/product/product_detail.html
@@ -88,13 +88,6 @@
                             <h2 class="header">{{ product.seller }}</h2>
                             <i class="fa fa-heart" aria-hidden="true"></i>
                         </div>
-                        <div class="seller-rating" data-rating="{{ product.rating }}">
-                            <i class="fa fa-star" aria-hidden="true"></i>
-                            <i class="fa fa-star" aria-hidden="true"></i>
-                            <i class="fa fa-star" aria-hidden="true"></i>
-                            <i class="fa fa-star" aria-hidden="true"></i>
-                            <i class="fa fa-star" aria-hidden="true"></i>
-                        </div>
                     </div>
                     <div class="seller-info">
                         <div class="seller-img">
@@ -106,10 +99,6 @@
                                     총 작업 갯수
                                     <h2>{{ count }}개</h2>
                                 </div>
-                                <div class="seller-info-item seller-detail-rating">
-                                    고객 만족도
-                                    <h2>{{ rating }}%</h2>
-                                </div>
                             </div>
                             <div class="seller-detail-info-bottom">
                                 전문가 소개
@@ -118,10 +107,6 @@
                                 </p>
                             </div>
                         </div>
-                    </div>
-                    <div class="seller-contact">
-                        <h2>판매자에게 1:1 문의하기</h2>
-                        <h3>({{ product.seller.user.last_login|time_since }} 활동)</h3>
                     </div>
                 </div>
                 <div class="info-right">
@@ -132,36 +117,77 @@
                         <div class="product-price">
                             <h2 id="product-price"
                                 data-price="{{ default_price.price }}">{{ default_price.price }}원~</h2>
-                            <p>({{ product.workContent }})</p>
-                        </div>
-                        <div class="product-analytics">
-                            {% for item in sns.analytics.all %}
-                                {% if forloop.counter0 == 0 %}
-                                    {{ item.analytics }} : {{ item.outcome|round_count }} /
-                                {% else %}
-                                    {{ item.analytics }} : {{ item.outcome|round_count }}
-                                {% endif %}
-                            {% endfor %}
-                        </div>
-                        <div class="product-type">
-                            테마 :
-                            {% for item in product.tags.all %}
-                                {% if forloop.counter0 != 0 %}
-                                    , {{ item.get_tag_display }}
-                                {% else %}
-                                    {{ item.get_tag_display }}
-                                {% endif %}
-                            {% endfor %}
                         </div>
                     </div>
-                    <div class="product-caution">
-                        <h2 id="product-caution">
-                            {% if product.required %}
-                                유의사항 : {{ product.required|truncatechars:24 }}
+                    <div class="product-sub-info">
+                        <div class="title">
+                            기본가격
+                        </div>
+                        <div class="sub-content">
+                            <span class="orange">{{ default_price.price }}원</span>
+                        </div>
+                    </div>
+                    <div class="product-sub-info">
+                        <div class="title">
+                            작업기간
+                        </div>
+                        <div class="sub-content">
+                            <span class="orange">{{ default_price.day }}</span>일 (실제평균작업기간 : <span
+                                class="orange">1일</span>)
+                        </div>
+                    </div>
+                    <div class="product-sub-info">
+                        <div class="title">
+                            구매만족도
+                        </div>
+                        <div class="sub-content">
+                            <div class="seller-rating" data-rating="{{ product.rating }}">
+                                <i class="fa fa-star" aria-hidden="true"></i>
+                                <i class="fa fa-star" aria-hidden="true"></i>
+                                <i class="fa fa-star" aria-hidden="true"></i>
+                                <i class="fa fa-star" aria-hidden="true"></i>
+                                <i class="fa fa-star" aria-hidden="true"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="product-sub-info">
+                        <div class="title">
+                            주문성공율
+                        </div>
+                        <div class="sub-content">
+                            <span class="green">높음</span>
+                        </div>
+                    </div>
+                    <div class="product-sub-info">
+                        <div class="title">
+                            연락처
+                        </div>
+                        <div class="sub-content">
+                            {% if request.user.seller %}
+                                {{ product.seller }}
                             {% else %}
-                                유의사항이 없습니다.
+                                (주문 후 공개)
                             {% endif %}
-                        </h2>
+                        </div>
+                    </div>
+                    <div class="product-sub-info">
+                        <div class="title">
+                            최근로그인
+                        </div>
+                        <div class="sub-content">
+                            {{ product.seller.user.last_login|time_since }}
+                        </div>
+                    </div>
+                    <div class="product-sub-info">
+                        <div class="title">
+                            판매자문의
+                        </div>
+                        <div class="sub-content">
+                            <div class="ask-seller">
+                                문의하기
+                            </div>
+                            <span>(문의 평균 응답시간)</span>
+                        </div>
                     </div>
                     <div class="product-option">
                         <div class="product-dropdown">
