--- a/static/css/product.css
+++ b/static/css/product.css
@@ -143,7 +143,8 @@
 .info .post_image h2 {
     position: absolute;
     top: 111px;
-    left: 28px;
+    width: 100%;
+    text-align: center;
     font-size: 10px;
     color: red;
     cursor: pointer;
