--- a/static/css/dashboard/purchase.css
+++ b/static/css/dashboard/purchase.css
@@ -151,13 +151,14 @@ input[type=number]::-webkit-outer-spin-button {
 
 .dashboard-purchase .pay-info {
     float: left;
+    width: 70%;
     padding: 25px 0 30px 25px;
 }
 
 .dashboard-purchase .total {
     float: right;
     background: #F2F2F2;
-    width: 145px;
+    width: 30%;
     height: 100%;
     text-align: right;
     padding-right: 10px;
