--- a/static/css/dashboard.css
+++ b/static/css/dashboard.css
@@ -262,6 +262,7 @@ body {
     line-height: 1.4;
     font-weight: 400;
     float: left;
+    width: 370px;
 }
 
 .dashboard-content .dashboard-register-seller .dashboard-register-seller-button {
