--- a/templates/account/account_home.html
+++ b/templates/account/account_home.html
@@ -12,7 +12,7 @@
                     <p>SNS 운영자라면 판매자로 등록할 수 있습니다.</p>
                     <p>적합한 포스팅 구매자와 빠르고 간편하게 거래할 수 있습니다.</p>
                 </div>
-                <button class="dashboard-register-seller-button">판매자 등록</button>
+                <button class="dashboard-register-seller-button">상품 등록</button>
             </div>
         {% endif %}
         <div class="dashboard-menu">
