--- a/templates/account/dashboard_base.html
+++ b/templates/account/dashboard_base.html
@@ -19,7 +19,7 @@
     <div class="dashboard_container">
         <div class="dashboard-header">
             <div class="dashboard-title">
-                포스팅 게시
+                <a href="{% url 'dashboard' %}">포스팅 게시</a>
             </div>
             <div class="dashboard-sub">
                 <ul>
